[package]
name = "HKCM"
version = "0.1.0"
edition = "2021"

[dependencies]
# asr = { git = "https://github.com/AlexKnauth/asr", branch = "mono-5-split-index", features = [
#     "alloc", # Working with allocations.
#     "derive", # Defining your own settings structs, converting endianness, and binding to .NET classes.
#     "integer-vars", # Setting integer variables.
#     "unity", # Accessing games using the Unity engine.
# ] }

once_cell = "1.21.3"
lazy_static = "1.5.0"
libc = "0.2.171"
log = { version = "0.4", features = ["std", "serde"] }
sdl3 = { version = "=0.14.36", features = ["build-from-source"] }

[target."cfg(windows)".dependencies]
vigem-client = "0.1.4"
