[package]
name = "HKCM"
version = "0.1.0"
edition = "2021"

[dependencies]
asr = { git = "https://github.com/AlexKnauth/asr", branch = "mono-5-split-index", features = [
    "alloc", # Working with allocations.
    "derive", # Defining your own settings structs, converting endianness, and binding to .NET classes.
    "integer-vars", # Setting integer variables.
    "unity", # Accessing games using the Unity engine.
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
once_cell = "1.21.3"
lazy_static = "1.5.0"
libc = "0.2.171"
humantime = "2.2.0"
log = { version = "0.4", features = ["std", "serde"] }
sdl3 = { version = "=0.15.1", features = ["build-from-source", "ttf"] }
log4rs = "1.4.0"

[target."cfg(windows)".dependencies]
vigem-client = "0.1.4"
windows = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
] }

